force-app/main/default/objects/SharePoint_Config__c/SharePoint_Config__c.object-meta.xml
<CustomObject>
    <!--
      customSettingsVisibility DELIBERATELY OMITTED — precedent: Content_Publication_Budget__c
      (see its .object-meta.xml comment for the full incident record). At API 67.0 in this org,
      declaring customSettingsVisibility (Public/Protected) fails deploy with "Property
      'customSettingsVisibility' not valid in version 67.0" and cascades into ~30 unrelated
      looking "Dependent class is invalid" Apex errors on a full package deploy.
      customSettingsVisibility is a MANAGED PACKAGE concept governing cross-namespace Apex access;
      this project has no namespace configured (CLAUDE.md), so there is no boundary for it to
      govern. Access to this setting's fields is governed the same way as any other object in this
      repo: Field Level Security via Permission Sets. Apex reads via getOrgDefaults() are NOT FLS
      filtered by default, so the real control is which Apex classes are trusted to call it
      (SharePointConfig only), not a metadata-level visibility flag.
    -->
    <customSettingsType>Hierarchy</customSettingsType>
    <description>SharePoint deal-folder feature (design-requirements-sharepoint-deal-folder.md D7): holds the Graph Site/Drive ids the DealFolderSweepBatch callout targets, an optional parent folder id (blank = drive root), and the Is_Enabled__c kill switch. Read via getOrgDefaults() — zero SOQL, same as Content_Publication_Budget__c. No hardcoded fallback anywhere in Apex: if unset or Is_Enabled__c is false, the feature does nothing and stamps Property__c.SharePoint_Folder_Status__c = 'Skipped'. Custom Setting DATA is not deployable — the org-default row is created at runtime or by hand in Setup as a post-deploy step; do not expect a data row in source control.</description>
    <label>SharePoint Config</label>
</CustomObject>