force-app/main/default/objects/SharePoint_Config__c/fields/Drive_ID__c.field-meta.xml
<CustomField>
    <fullName>Drive_ID__c</fullName>
    <description>Optional Graph drive id. Graph accepts /sites/{Site_ID__c}/drive/... without it, so this is only needed when targeting a non-default document library.</description>
    <label>Drive ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>