force-app/main/default/objects/SharePoint_Config__c/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Kill switch for the SharePoint deal-folder feature. False (the default) means DealFolderService/DealFolderSweepBatch do nothing and stamp Skipped — no hardcoded fallback exists anywhere in Apex.</description>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>