force-app/main/default/objects/SharePoint_Config__c/fields/Parent_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Folder_ID__c</fullName>
    <description>Optional Graph drive item id of the parent folder new deal folders are created under. Blank means the drive root. Addressed by item id, not by path — EncodingUtil.urlEncode emits '+' for a space, which is wrong for a path segment.</description>
    <label>Parent Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>