force-app/main/default/objects/SharePoint_Config__c/fields/Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_ID__c</fullName>
    <description>Microsoft Graph SharePoint site id the deal-folder callout targets: /sites/{Site_ID__c}/drive/... . Blank means the feature is not configured — SharePointConfig must not fall back to a hardcoded value.</description>
    <label>Site ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>